src/objects/EventApi__Sponsor__c.object
<CustomObject>
    <description>Sponsors track the organizations who have purchased a &quot;Sponsorship Package&quot; for a Event.</description>
    <fields>
        <fullName>EventApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsors</relationshipLabel>
        <relationshipName>Sponsors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Contact. Derives from the Account &quot;Primary Contact&quot; field if no value defined.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Contact. Derives from the Account &quot;Primary Contact&quot; field if no value defined.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SYSTEM</relationshipLabel>
        <relationshipName>Sponsors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the sponsored event.</description>
        <inlineHelpText>Link to the sponsored event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Sponsors</relationshipLabel>
        <relationshipName>Sponsors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Image_URL__c</fullName>
        <description>Secure (&quot;https://&quot;) location of an image or logo that will display the sponsor&quot;s name. Image should be at least 250px in the smallest dimension and the file size should not exceed 250 KB.</description>
        <inlineHelpText>Secure (&quot;https://&quot;) location of an image or logo that will display the sponsor&quot;s name. Image should be at least 250px in the smallest dimension and the file size should not exceed 250 KB.</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Sponsor will display in the &quot;Featured Sponsors&quot; component for Lightning Events.</description>
        <inlineHelpText>When checked, the Sponsor will display in the &quot;Featured Sponsors&quot; component for Lightning Events.</inlineHelpText>
        <label>Is Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsor_Hyperlink__c</fullName>
        <description>The value in this field will allow front end users to click on the sponsor image to navigate to the URL.</description>
        <inlineHelpText>The value in this field will allow front end users to click on the sponsor image to navigate to the URL.</inlineHelpText>
        <label>Sponsor Hyperlink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsor_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the purchased sponsor package.</description>
        <inlineHelpText>Link to the purchased sponsor package.</inlineHelpText>
        <label>Sponsor Package</label>
        <referenceTo>EventApi__Sponsor_Package__c</referenceTo>
        <relationshipLabel>Sponsors</relationshipLabel>
        <relationshipName>Sponsors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LTE__Is_Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Sponsor will display in the &quot;Featured Sponsors&quot; component for Lightning Events.</description>
        <inlineHelpText>When checked, the Sponsor will display in the &quot;Featured Sponsors&quot; component for Lightning Events.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <label>Sponsor</label>
    <listViews>
        <fullName>EventApi__All</fullName>
        <columns>NAME</columns>
        <columns>EventApi__Account__c</columns>
        <columns>EventApi__Contact__c</columns>
        <columns>EventApi__Sponsor_Package__c</columns>
        <columns>EventApi__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sponsor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>